# mods-checker

./: .gitignore  Cargo.toml  README.md  a.txt  action.yml  shell.nix
.github/workflows/: add-mod.yml  release.yml  test-mod.yml
src/: cli.rs  main.rs
