[package]
name = "mods-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = "4.4.13"
clap_derive = "4.4.7"
octocrab = "0.32.0"
owmods_core = "0.12.0"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.111"
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = "1.35.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
